fix: 枚举 JSON 序列化修复 + Jackson 配置
- 所有枚举添加 @JsonValue/@JsonCreator，输出小写值
- 新增 AnalyzeAction、NotificationType 枚举
- Jackson 配置禁用 getter 自动检测，避免计算方法被序列化

--- a/vibe-drive-backend/src/main/resources/application.yml
+++ b/vibe-drive-backend/src/main/resources/application.yml
@@ -4,6 +4,18 @@ server:
 spring:
   application:
     name: vibe-drive
+  jackson:
+    # 禁用自动检测 getter 方法，避免计算方法被序列化
+    visibility:
+      getter: none
+      is-getter: none
+      field: any
+    # 序列化配置
+    serialization:
+      write-dates-as-timestamps: false
+    # 反序列化配置
+    deserialization:
+      fail-on-unknown-properties: false
 
 # LangChain4j Configuration
 langchain4j:
