feat: 阶段5 Agent编排层实现
- 新增 orchestration 编排层（VibeDialogService 递归编排核心）
- 新增 agent 层（VibeAgent, VibeAgentFactory, PromptAssembler）
- 新增 VibeAgentConfig 配置类
- 升级 LangChain4j 到 1.9.1
- AmbiencePlan 添加 silent() 和 applyingSafetyFilter()
- 添加 @EnableScheduling 支持心跳

--- a/vibe-drive-backend/pom.xml
+++ b/vibe-drive-backend/pom.xml
@@ -19,7 +19,7 @@
 
     <properties>
         <java.version>21</java.version>
-        <langchain4j.version>1.0.0-alpha1</langchain4j.version>
+        <langchain4j.version>1.9.1</langchain4j.version>
     </properties>
 
     <dependencies>
@@ -46,11 +46,6 @@
         <dependency>
             <groupId>dev.langchain4j</groupId>
             <artifactId>langchain4j-open-ai</artifactId>
-            <version>${langchain4j.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>dev.langchain4j</groupId>
-            <artifactId>langchain4j-spring-boot-starter</artifactId>
             <version>${langchain4j.version}</version>
         </dependency>
 
