--- a/vibe-drive-backend/src/main/resources/application.yml
+++ b/vibe-drive-backend/src/main/resources/application.yml
@@ -21,8 +21,9 @@ spring:
 langchain4j:
   open-ai:
     chat-model:
-      api-key: ${OPENAI_API_KEY:demo}
-      model-name: gpt-4o-mini
+      base-url: https://api.deepseek.com
+      api-key: sk-45bc3912cb954ca9868c52f571b6d7af
+      model-name: deepseek-chat
       temperature: 0.7
       log-requests: true
       log-responses: true
