feat: 添加语音输入功能（待测试）
- 添加 Whisper Docker 服务配置
- 创建 useVoiceInput.ts 录音组件
- 创建 VoiceInput.vue 录音按钮
- 集成到 MainView
- 添加主智能体设计探索文档

TODO: 语音输入功能待实际测试

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,3 +6,25 @@ services:
     ports:
       - "8081:8081"
     restart: unless-stopped
+
+  whisper:
+    image: onerahmet/openai-whisper-asr-webservice:latest-gpu
+    ports:
+      - "9000:9000"
+    environment:
+      - ASR_MODEL=medium
+      - ASR_ENGINE=faster_whisper
+      - HF_ENDPOINT=https://hf-mirror.com
+    volumes:
+      - whisper-cache:/root/.cache
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities: [gpu]
+    restart: unless-stopped
+
+volumes:
+  whisper-cache:
